2003-08-27  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-debug-log-view.c, cong-editor-area-bin.c, cong-editor-area.c, cong-editor-child-policy.c, cong-editor-widget3.c, cong-file-new.c, plugin-lists-node-element-listitem.c, popup.c, xmldata.c 

	Fixed some warnings
	
	* cong-document.c, cong-document.h, cong-editor-widget3.c

	Support for deleting the selection
	
	* cong-text-cache.c

	Fixed a missing return value and added lots of assertions

	* cong-text-cache.c

	Fixed an assertion failure when moving the cursor through a region of stripped whitespace
	
2003-08-26  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-node-text.c, cong-editor-node-text.h, cong-editor-widget.h, cong-editor-widget3.c

	Support for cursor up and down movement in the new editor widget.

2003-08-14  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-primary-window.c

	Turned new editor widget on by default

	* cong-editor-widget3.c

	Initial implementation of keypress handling for new widget

	* cong-util.c, cong-util.h, plugin-docbook.c
	
	Moved Docbook detection from plugin-docbook.c into cong-util.c

	* cong-document.c, cong-node.h, plugin-lists-node-element-listitem.c, plugin-website.c, xmldata.c

	Added namespace support to cong_node_is_tag, plus some other utility functions on nodes

2003-08-13  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-app.c, cong-app.h, cong-document.c, cong-document.h, cong-editor-node-comment.c, cong-editor-node-text.c, cong-location.c, cong-location.h, cong-menus.c, cong-node.h, cong-primary-window.c, cong-span-text-editor.c, cursor.c, global.h, main.c, popup.c, select.c, tree.c, xmldata.c, xmledit.c

	Big clipboard cleanup: now represented as a source string, rather than as CongNodePtr

	* cong-range.h, cong-selection.h, cong-range.c, Makefile.am

	New files:  big tidy up of CongSelection using a new CongRange type

	* cong-editor-area-flow-holder-blocks.c

	Fixed a bug in the inline-splitting code
